--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,12 +1,16 @@
 @import "../movie/movie.wxss";
 
+.content{
+    display: flex;
+    flex-direction: column;
+    min-height:0;
+}
 .search{
     display: flex;
     padding: 5px;
     font-size: 14px;
     background-color: #ccc;
-    border-bottom: 1px solid #ccc;
-    box-shadow: 0px 2px 5px #ccc;
+    
 }
 .search button{
     width: 30%;
@@ -23,4 +27,12 @@
     color: #000;
     background-color:#fff;
     border-radius: 5px;
+}
+.inputShow{
+    color: #000;
+    font-size: 12px;
+    background-color: #ccc;
+    border-bottom: 1px solid #ccc;
+    box-shadow: 0px 2px 5px #ccc;
+    padding: 5px;
 }
