完善电影查询模块

--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -15,3 +15,7 @@
     </loading>
     </view>
 </view>
+
+<modal class="modal" hidden="{{modalHidden}}" no-cancel bindconfirm="modalChange" >
+  {{tip}}
+</modal>
