--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -3,7 +3,7 @@
         <input class="input" placeholder="输入电影名、导演、演员" bindinput="bindKeyInput" />
         <button bindtap="search" type="primary" hover-class="btnClick"> 查 询 </button>
     </view>
-    <text class="inputShow">你要搜索：{{inputVal}}</text>
+    <text class="inputShow">{{inputVal}}</text>
 </view>
 <view>
     <import src="../template/movieListTpl.wxml"/>
